src/objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Bill</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <description>Date displayed on bill</description>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>Status regarding bill of particular media</description>
        <label>status</label>
        <picklist>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>